Fixed Spacing

--- a/css/scss/main.css
+++ b/css/scss/main.css
@@ -8163,10 +8163,6 @@ a img.aligncenter {
           .mobile-menu-wrapper .mobile-menu nav ul li a:hover {
             text-decoration: none; }
 
-@media (max-width: 992px) {
-  .content {
-    margin-top: 80px; } }
-
 .content .page-content {
   margin-top: 40px;
   margin-bottom: 40px; }
