--- a/css/scss/structure/structure.scss
+++ b/css/scss/structure/structure.scss
@@ -1,7 +1,4 @@
 .content{
-    @media(max-width: 992px){
-        margin-top: 80px;
-    }
     .page-content{
         margin-top: 40px;
         margin-bottom: 40px;
